[gd_scene load_steps=3 format=2]

[ext_resource path="res://Codes/Test.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Test" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnJoueur" type="Position2D" parent="."]
position = Vector2( 148.423, 267.166 )

[node name="Magasin" type="Position2D" parent="."]
position = Vector2( 1.17862, -0.894318 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 256, 256 )
texture = ExtResource( 2 )

[node name="SpawnEnnemis1" type="Position2D" parent="."]
position = Vector2( 0, -500 )

[node name="SpawnEnnemis2" type="Position2D" parent="."]
position = Vector2( 500, 0 )

[node name="SpawnEnnemis3" type="Position2D" parent="."]
position = Vector2( 0, 500 )

[node name="SpawnEnnemis4" type="Position2D" parent="."]
position = Vector2( -500, 0 )
